--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
-API_ID="24314944"
-API_HASH="608c07ba57d9130d9974c9b3639ec570"
-BOT_TOKEN="5983862950:AAEHmjYDm1GhEtalyl9OGQUwxal4xmnHXxE"
-BIN_CHANNEL="-1001944172464"
+API_ID="25479482"
+API_HASH="6ab604ff91a73fb91cc6526818e28ab1"
+BOT_TOKEN="6098652695:AAHwFEP5hXGt-K6LVtDXvt2yR8Tfc5Bdxto"
+BIN_CHANNEL="-1001829705047"
 CAPTION_POSITION="BOTTOM"
-OWNER_ID="6264350806"
-DATABASE_URL="mongodb+srv://Filestreambot:Filestreambot@cluster0.tct3qrd.mongodb.net/?retryWrites=true&w=majority"
+OWNER_ID="5736579519"
+DATABASE_URL="mongodb+srv://devilbot:Rajbot@cluster0.ldrbggy.mongodb.net/?retryWrites=true&w=majority"
 APP_NAME="ffiletolinkda"
 ENV="True"
 FQDN="https://62.210.211.31:8080"
 NO_PORT="True"
-UPDATES_CHANNEL="Opleech"
+UPDATES_CHANNEL="moneycaseofficial"
