--- a/config.env
+++ b/config.env
@@ -7,6 +7,6 @@ OWNER_ID="5736579519"
 DATABASE_URL="mongodb+srv://devilbot:Rajbot@cluster0.ldrbggy.mongodb.net/?retryWrites=true&w=majority"
 APP_NAME="ffiletolinkda"
 ENV="True"
-FQDN="https://62.210.211.31:8080"
+FQDN="https://62.210.81.51/:8080"
 NO_PORT="True"
 UPDATES_CHANNEL="moneycaseofficial"
